# rust-playground

./: .gitignore  .gitmodules  AGENT_PROJECTS.md  README.md  create-cargo-rust-project.sh  install.sh
Leptos-Fun/: Cargo.toml  README.md  index.html  run.sh
PyO3-Fun/: Cargo.toml
PyO3-Fun/src/: lib.rs
abscissa_cool_app/: Cargo.toml  README.md
abscissa_cool_app/src/: application.rs  commands.rs  config.rs  lib.rs
abscissa_cool_app/src/commands/: start.rs  version.rs
abscissa_cool_app/tests/: acceptance.rs
actix-web-tokio-rest/: Cargo.toml  README.md  run.sh  test.sh
adder/: Cargo.toml
aes-encryption-fun/: Cargo.toml
allocator/: README.md
anyhow-fun/: Cargo.toml
arena-allocator/: README.md
argh-fun/: Cargo.toml  README.md
arrays-fun/: Cargo.toml
arrow-datafusion-fun/: Cargo.toml
async_std_fun/: Cargo.toml
azul_fun/: Cargo.toml
basic_lang/: Cargo.toml
bastion-fun/: Cargo.toml
battery_fun/: Cargo.toml
bf-tree-fun/: Cargo.toml  README.md  run.sh
borrow_and_ownership/: Cargo.toml
boxing-arena-fun/: Cargo.toml
bytes-string-back/: README.md
cargo-make-fun/: README.md  make.toml  run.sh
cargo-scripts/: README.md  now.crs
case-run/: .gitignore  Cargo.toml
cassandra-fun/: Cargo.toml
cedar-policy-fun/: Cargo.toml  README.md
chrono-fun/: Cargo.toml
clap-fun/: Cargo.toml  README.md
const-function-and-eval/: README.md
criterion-fun/: Cargo.toml  README.md
crossbeam-fun/: Cargo.toml
crossbeam-fun/src/global/: main.rs
crossbeam-fun/src/simple/: main.rs
crossbeam-fun/src/threadpool/: main.rs
css-style-fun/: Cargo.toml
cursive-fun/: Cargo.toml  README.md
cursive-fun/src/: main.rs
cursive-fun/src/listview/: main.rs
cursive-fun/src/radio/: main.rs
cursive-fun/src/select/: main.rs
cursive-fun/src/textarea/: main.rs
cursive-fun/src/userdata/: main.rs
dashmap_fun/: Cargo.toml
default-default-fun/: Cargo.toml
dial9-fun/: Cargo.toml  README.md  run.sh
diesel-mysql/: .env  Cargo.toml  README.md  diesel.toml  run-mysql-9.2-docker.sh  run-mysql-cli.sh  run-stop-mysql-docker.sh
diesel-postgres/: .env  Cargo.toml  README.md  diesel.toml  run-create-schema-postgres.sh  run-postgres-db.sh  run-psql.sh  run-stop-postgres.sh
embed/: Cargo.toml  embed.js  embed.py  embed.rb
envmnt_fun/: Cargo.toml
error-chain-pattern-matcher-rust/: Cargo.toml
error-handling-custom-types/: README.md
extism-fun/: Cargo.toml
fern_fun/: Cargo.toml
fibonacci-iterator/: README.md
file-processing-struct/: data.txt
flate2_tfun/: Cargo.toml
flexi_logger_fun/: Cargo.toml
futures-fun/: Cargo.toml
futures_cpupool_fun/: Cargo.toml
generic-array_fun/: Cargo.toml
generic-const/: README.md
generic-constraints-assoc-types/: README.md
getset_fun/: Cargo.toml
glommio-fun/: Cargo.toml
glue-fun/: Cargo.toml
gpui_fun/: Cargo.toml
gpui_fun/src/: main.rs
graphql-rust-client-fun/: Cargo.toml  query.graphql
gtk_fun/: Cargo.toml  README.md
guessing_game/: Cargo.toml
heap_priority_queue_fun/: Cargo.toml
hello-rocket/: Cargo.toml  setup.sh
hello-world-actix/: Cargo.toml
hello_world/: Cargo.toml  run.sh
hyper-fun/: Cargo.toml
iced-fun/: Cargo.toml  README.md  index.html
impls-fun/: Cargo.toml
in-memory-stock-engine/: Cargo.toml  README.md  run.sh
iterate-fun/: Cargo.toml
jni-fun/: Cargo.toml  README.md  run.sh
json-simple-serde/: Cargo.toml
juniper-graphql-fun/: Cargo.toml
k8s-openapi-fun/: Cargo.toml
kafka-fun/: Cargo.toml  README.md  create-topic.sh  docker-compose.yml  produce-messages.sh  read-messages.sh
kube-fun/: Cargo.toml
kube-fun/src/: main.rs
lang_basics/: Cargo.toml
lazy_static_fun/: Cargo.toml
linked_hash_set_fun/: Cargo.toml
lisp-parser/: Cargo.toml
little-high-order-funcs/: Cargo.toml
log4rs_fun/: Cargo.toml  log4rs.yaml
log_fun/: Cargo.toml
loom-fun/: Cargo.toml
lunatic-fun/: Cargo.toml
macros/: README.md
maplit-fun/: Cargo.toml
maps-mutable-collections/: README.md
md5-fun/: Cargo.toml
memory-layout-packed/: README.md
meval_fun/: Cargo.toml
mock_derive_fun/: Cargo.toml
mock_mockall_fun/: Cargo.toml
mock_mockiato_fun/: Cargo.toml
mock_mockit_fun/: Cargo.toml
mock_mocktopus_fun/: Cargo.toml
monoio-fun/: Cargo.toml  README.md  test.sh
move/: README.md
mqtt-mosquitto-local/: Cargo.toml  README.md
nannou-fun/: Cargo.toml  README.md
nats-rs-fun/: Cargo.toml
neon-fun/my-project/native/: Cargo.toml
netstat-fun/: Cargo.toml
nickel-fun/: Cargo.toml
nom/: Cargo.toml
nom_locate_fun/: Cargo.toml
obsidian-fun/: Cargo.toml
once_cell_fun/: Cargo.toml
open-telemetry-rust-fun/: Cargo.toml  README.md  docker-compose.yml  generate-open-tel-data.sh  prometheus.yml  run.sh  start.sh  stop.sh  test.sh
open-telemetry-rust-fun/grafana/dashboards/: rust-otel.json
open-telemetry-rust-fun/grafana/provisioning/dashboards/: dashboard.yml
open-telemetry-rust-fun/grafana/provisioning/datasources/: datasource.yml
open-telemetry-rust-fun/src/: main.rs
pb-jelly-fun/: Cargo.toml  build.rs
pg-fun/: Cargo.toml  README.md  run-postgres.sh
pgdog-fun/: Cargo.toml  README.md  docker-compose.yaml  pgdog.toml  run-sql-client.sh  run.sh  start.sh  stop.sh  users.toml
pointer-arithmetic-fun/: Cargo.toml
rust-microservice/news-dao/: Cargo.toml
rust-microservice/news-dao/src/: lib.rs
rust-microservice/news-service/: Cargo.toml
rust-microservice/news-service/src/: endpoints.rs  main.rs  service.rs
rust-parsers/: Cargo.toml  README.md
rust-parsers/.metals/: metals.lock.db  metals.mv.db
rust-parsers/src/: main.rs
rust-parsers/src/parsers/: maven.rs  mod.rs  npm.rs  python.rs  sbt.rs
rust-parsers/testdata/: build.sbt  package.json  pom.xml  requirements.txt
sqlx-fun/: Cargo.toml  README.md
sqlx-fun/src/: main.rs
synthetic-data-gen/: Cargo.toml  README.md  test.sh
synthetic-data-gen/src/: main.rs
tonic/helloworld-tonic/: Cargo.toml  README.md
tonic/helloworld-tonic/src/: client.rs  server.rs
tui-fun/: Cargo.toml
tui-fun/src/chart/: main.rs
tui-fun/src/layout/: main.rs
tui-fun/src/table/: event.rs  main.rs
(+455 files in other folders)
