[package]
name = "abscissa_cool_app"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"

[dependencies.abscissa_core]
version = "0.5.2"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.2"

