[package]
name = "stock-monitor"
version = "1.0.0"
authors = ["Diego.Pacheco"]
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.3.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" 
