[package]
name = "open-telemetry-rust-fun"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "metrics"] }
opentelemetry-prometheus = "0.29"
prometheus = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
