[package]
name = "main"
version = "1.0.0"
authors = ["Diego.Pacheco"]
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
