[package]
name = "main"
version = "1.0.0"
authors = ["Diego.Pacheco"]
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.3.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }