[package]
name = "news-dao"
version = "1.0.0"
authors = ["Diego.Pacheco"]
edition = "2018"

[dependencies]
news-contract = { path = "../news-contract" }
postgres = "0.17.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"
tokio-postgres = "0.5.1"
tokio = "0.2.9"
uuid = {version="0.8.1",features=["v4"]}