[package]
name = "my-project"
version = "0.1.0"
authors = ["Diego Pacheco <diego.pacheco.it@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "my_project"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
